# sqlalchemy-searchable

./: .gitignore  .isort.cfg  .readthedocs.yaml  .travis.yml  CHANGES.rst  MANIFEST.in  README.md  README.rst  dev-setup.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: lint.yml  test.yml
docs/: Makefile  alembic_migrations.rst  conf.py  configuration.rst  index.rst  installation.rst  integrations.rst  make.bat  quickstart.rst  requirements.txt  search_query_parser.rst  vectorizers.rst
sqlalchemy_searchable/: __init__.py  composite.py  expressions.sql  parser.py  types.py  vectorizers.py
tests/: __init__.py  conftest.py  schema_test_case.py  test_class_configuration.py  test_composite_search.py  test_composite_search_vector.py  test_drop_trigger.py  test_multiple_vectors_per_class.py  test_parse_search_query.py  test_query_parser.py  test_safe_search_terms.py  test_schema_creation.py  test_searchable.py  test_single_table_inheritance.py  test_special_tokens.py  test_sql_functions.py  test_sync_trigger.py  test_vectorizers.py  test_weighted_search_vector.py
tests/composite_search_vector/: test_many_to_one_relationship.py  test_one_to_many_relationship.py
