[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SQLAlchemy-Searchable"
dynamic = ["version"]
description = "Provides fulltext search capabilities for declarative SQLAlchemy models."
readme = "README.rst"
license = "bsd-3-clause"
requires-python = ">=3.8"
authors = [
    { name = "Konsta Vesterinen", email = "konsta@fastmonkeys.com" },
]
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "SQLAlchemy-Utils>=0.37.5",
    "SQLAlchemy>=1.4,<1.5",
]

[project.urls]
Code            = "https://github.com/kvesteri/sqlalchemy-searchable"
Documentation   = "https://sqlalchemy-searchable.readthedocs.io/"
"Issue Tracker" = "http://github.com/kvesteri/sqlalchemy-searchable/issues"

[tool.hatch.version]
path = "sqlalchemy_searchable/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/CHANGES.rst",
    "/docs",
    "/sqlalchemy_searchable",
    "/tests",
]
exclude = [
    "/docs/_build",
]

[tool.isort]
known_first_party = ["sqlalchemy_searchable", "tests"]
line_length       = 79
multi_line_output = 3
order_by_type     = false
